docs/assets/styles/docs.css
/* ... */
#open-sidebar,
#close-sidebar {
  display: none;
  border-radius: var(--quiet-border-radius-md);
}

#navbar {
  display: flex;
  align-items: center;
  width: 100%;
  max-width: var(--docs-max-width);
  padding-inline: 1rem;
  gap: 1rem;

  @media screen and (max-width: 959px) {
    gap: 0.5rem;
  }
}

#body {
  display: grid;
  position: relative;
  grid-template-columns: auto;
  max-width: calc(var(--docs-max-width) - var(--docs-sidebar-width));
  height: 100%;
  min-height: 100dvh;
  margin-block-start: var(--docs-header-height);
  margin: 0 auto;
}

#sidebar {
  position: sticky;
  top: var(--docs-header-height);
  align-self: start;
  height: calc(100dvh - var(--docs-header-height));
  -webkit-text-size-adjust: 100%; /* prevent mobile Safari from showing larger text sometimes*/

  /* Bump the padding so focus rings and dots don't get clipped, then transform is back so it's visually aligned */
  padding-inline-start: calc(var(--quiet-focus-width) + var(--quiet-focus-offset) + 0.25rem);
  padding-inline-end: 2rem;
  padding-block: 3rem 2rem;
  overflow-x: hidden;
  overflow-y: auto;
  translate: calc(-1 * (var(--quiet-focus-width) + var(--quiet-focus-offset)) - 0.25rem);
  border-right: var(--quiet-border-style) var(--quiet-border-width) var(--quiet-neutral-stroke-softer);

  @media screen and (min-width: 1420px) {
    padding-inline: 1.5rem;
  }
}

#sidebar-meta {
  svg {
    display: block;
    max-width: 1.75rem;
    max-height: 1.75rem;
    margin-block-end: -0.33rem;
  }

  small {
    color: var(--quiet-text-muted);
  }
}

#page {
  display: grid;
  position: relative;
  grid-template-columns: auto;
  /* Adjust for the sidebar's focus ring offset so the page is equally balanced */
  margin-inline-end: calc(var(--quiet-focus-width) + var(--quiet-focus-offset));
  padding-inline: 2rem;
  padding-block-start: var(--docs-header-height);
  padding-block-end: 0;
  gap: var(--docs-content-spacing);
}

#body.has-sidebar {
  grid-template-columns: var(--docs-sidebar-width) auto;
  max-width: var(--docs-max-width);
}

#body.has-sidebar #page {
  padding-inline-start: var(--docs-content-spacing);

  @media screen and (max-width: 959px) {
    padding-inline-start: 1.5rem;
  }
}

/*
  Hide the sidebar on desktop when the page doesn't have it. This allows us to show the toggle button consistently on
  mobile devices.
*/
@media screen and (min-width: 959px) {
  #body:not(.has-sidebar) #sidebar {
    display: none;
  }
}

#page.has-outline {
  grid-template-columns: auto var(--docs-outline-width);
}

.layout-splash #page {
  max-width: 58rem;
  margin-inline: auto;
  padding-inline: 0;
}

.layout-page #body {
  max-width: 70ch;
}

.layout-wide #body {
  max-width: 90ch;
}

/* Page-specific settings */
body.browse-components {
  #body {
    max-width: 1500px;
  }

  #page {
    grid-template-columns: unset;
  }
}

#content {
  order: 1;
  min-width: 0; /* prevent overflowing content from stretching the column */
  margin-block-end: 2rem;

  .title {
    margin-block-start: 3rem;
    margin-block-end: 2rem;
  }

  .component-info {
    display: flex;
    flex-wrap: wrap;
    margin-block-start: -1rem;
    margin-block-end: 1rem;
    gap: 0.25rem;
  }

  .component-tag {
    margin-inline-end: 0.25rem;
    padding: 0;
    background: transparent;
    color: var(--quiet-text-muted);
    font-size: 1.2rem;
  }

  @media screen and (max-width: 959px) {
    .component-tag {
      display: block;
      width: 100%;
    }
  }
}

#content pre:has(code) {
  padding: 0;
  clear: both;
  background-color: var(--quiet-neutral-900);

  > code {
    display: block;
    padding: 1rem;
    overflow-x: auto;
    border-radius: inherit;
    background-color: transparent;
    color: white;
    hyphens: none;
    white-space: pre;
    tab-size: 2;
  }
}

#content details pre:has(code) {
  background-color: color-mix(in oklab, var(--quiet-neutral-900), white 5%);
}

#content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    quiet-badge {
      font-size: 0.875rem;
      vertical-align: middle;
    }
  }
}

p code {
  white-space: nowrap;
}

/* Experimental badges */
quiet-badge.experimental {
  background-color: #fbbf24;
  color: black;
}

/* Anchor headings */
.anchor-heading {
  max-width: fit-content;
}

@media (hover: hover) {
  .anchor-heading a {
    visibility: hidden;
    text-decoration: none;
  }

  .anchor-heading:hover a {
    visibility: visible;
    padding: 0 0.125em;
  }
}

@media not (hover: hover) {
  .anchor-heading a {
    color: color-mix(in oklab, var(--quiet-text-muted), transparent 50%);
    text-decoration: none;
  }
}

#content aside {
  max-width: 340px;
  margin-inline-start: 1.5rem;
  margin-block: 1.5rem;
  padding: 1.5rem;
  float: inline-end;
  border-radius: var(--quiet-border-radius-sm);
  background-color: var(--quiet-background-color-lowered);
}

#content aside :first-child {
  margin-block-start: 0;
}

#content aside :last-child {
  margin-block-end: 0;
}

#content quiet-tab-list {
  margin-block-end: var(--quiet-content-spacing);
}

#content .code-example quiet-tab-list {
  margin-block-end: revert;
}

@media screen and (max-width: 959px) {
  #content aside {
    max-width: none;
    margin-inline: 0;
    margin-block: 2rem;
    float: none;
  }
}

/* Outline */
#outline {
  position: sticky;
  top: var(--docs-header-height);
  order: 2;
  height: calc(100dvh - var(--docs-header-height));
  padding-block: 3rem 2rem;
  overflow: auto;
}

#outline h2 > a {
  color: inherit;
  font-weight: inherit;
}

#outline-expandable {
  display: none;
}

#outline-expandable ul {
  column-gap: 2rem;
  padding-inline: 1rem;
  columns: 2;
}

#outline [data-level='3'] {
  margin-inline-start: 1rem;
}

@media screen and (max-width: 1419px) {
  :root {
    --docs-content-spacing: 4rem;
  }

  #body,
  #navbar {
    padding-inline: 2rem;
  }
}
/* ... */

